[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/tile_0158.png" type="Texture" id=2]
[ext_resource path="res://Assets/tile_0050.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fira/Fira_Regular.tres" type="DynamicFont" id=4]

[node name="Lobby" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -26.9796
margin_top = -37.7551
margin_right = 1053.02
margin_bottom = 638.245
color = Color( 0.145098, 0.678431, 0.843137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 736.448
margin_top = 339.004
margin_right = 772.448
margin_bottom = 357.004
rect_scale = Vector2( 6.52659, 6.52659 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 18.0
texture_normal = ExtResource( 3 )

[node name="JoinLabel" type="Label" parent="HBoxContainer/JoinButton"]
margin_left = -1.71983
margin_top = 16.8543
margin_right = 38.2802
margin_bottom = 30.8543
rect_scale = Vector2( 0.5, 0.5 )
text = "Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 18.0
texture_normal = ExtResource( 2 )

[node name="CreateLabel" type="Label" parent="HBoxContainer/CreateButton"]
margin_left = -2.45772
margin_top = 17.1141
margin_right = 38.5423
margin_bottom = 31.1141
rect_scale = Vector2( 0.5, 0.5 )
text = "Create"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 40.4086
margin_top = 121.226
margin_right = 240.409
margin_bottom = 163.226
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 4.66412, 4.66412 )
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBox"]
margin_right = 200.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="VBox"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 47.0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="text_changed" from="VBox/NameInput" to="." method="_on_NameInput_text_changed"]
